logs/offboard_pkg/build.make.040.log.stderr
In file included from /opt/ros/noetic/include/ros/ros.h:40,
                 from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:1:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp: In function ‘int main(int, char**)’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:115:58: error: request for member ‘x’ in ‘((Eigen::DenseCoeffsBase<Eigen::Matrix<double, 3, 1>, 1>*)(& lla_lead0))->Eigen::DenseCoeffsBase<Eigen::Matrix<double, 3, 1>, 1>::operator[](0)’, which is of non-class type ‘Eigen::DenseCoeffsBase<Eigen::Matrix<double, 3, 1>, 1>::Scalar’ {aka ‘double’}
  115 |         ROS_INFO("lla_lead %f, %f, %f, %f", lla_lead0[0].x(), lla_lead0[0].y(), lla_lead0[0].z(), yaw_d);
      |                                                          ^
/opt/ros/noetic/include/ros/console.h:351:165: note: in definition of macro ‘ROSCONSOLE_PRINT_AT_LOCATION_WITH_FILTER’
  351 |     ::ros::console::print(filter, __rosconsole_define_location__loc.logger_, __rosconsole_define_location__loc.level_, __FILE__, __LINE__, __ROSCONSOLE_FUNCTION__, __VA_ARGS__)
      |                                                                                                                                                                     ^~~~~~~~~~~
/opt/ros/noetic/include/ros/console.h:390:7: note: in expansion of macro ‘ROSCONSOLE_PRINT_AT_LOCATION’
  390 |       ROSCONSOLE_PRINT_AT_LOCATION(__VA_ARGS__); \
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/ros/noetic/include/ros/console.h:575:35: note: in expansion of macro ‘ROS_LOG_COND’
  575 | #define ROS_LOG(level, name, ...) ROS_LOG_COND(true, level, name, __VA_ARGS__)
      |                                   ^~~~~~~~~~~~
/opt/ros/noetic/include/rosconsole/macros_generated.h:110:23: note: in expansion of macro ‘ROS_LOG’
  110 | #define ROS_INFO(...) ROS_LOG(::ros::console::levels::Info, ROSCONSOLE_DEFAULT_NAME, __VA_ARGS__)
      |                       ^~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:115:9: note: in expansion of macro ‘ROS_INFO’
  115 |         ROS_INFO("lla_lead %f, %f, %f, %f", lla_lead0[0].x(), lla_lead0[0].y(), lla_lead0[0].z(), yaw_d);
      |         ^~~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:115:76: error: request for member ‘y’ in ‘((Eigen::DenseCoeffsBase<Eigen::Matrix<double, 3, 1>, 1>*)(& lla_lead0))->Eigen::DenseCoeffsBase<Eigen::Matrix<double, 3, 1>, 1>::operator[](0)’, which is of non-class type ‘Eigen::DenseCoeffsBase<Eigen::Matrix<double, 3, 1>, 1>::Scalar’ {aka ‘double’}
  115 |         ROS_INFO("lla_lead %f, %f, %f, %f", lla_lead0[0].x(), lla_lead0[0].y(), lla_lead0[0].z(), yaw_d);
      |                                                                            ^
/opt/ros/noetic/include/ros/console.h:351:165: note: in definition of macro ‘ROSCONSOLE_PRINT_AT_LOCATION_WITH_FILTER’
  351 |     ::ros::console::print(filter, __rosconsole_define_location__loc.logger_, __rosconsole_define_location__loc.level_, __FILE__, __LINE__, __ROSCONSOLE_FUNCTION__, __VA_ARGS__)
      |                                                                                                                                                                     ^~~~~~~~~~~
/opt/ros/noetic/include/ros/console.h:390:7: note: in expansion of macro ‘ROSCONSOLE_PRINT_AT_LOCATION’
  390 |       ROSCONSOLE_PRINT_AT_LOCATION(__VA_ARGS__); \
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/ros/noetic/include/ros/console.h:575:35: note: in expansion of macro ‘ROS_LOG_COND’
  575 | #define ROS_LOG(level, name, ...) ROS_LOG_COND(true, level, name, __VA_ARGS__)
      |                                   ^~~~~~~~~~~~
/opt/ros/noetic/include/rosconsole/macros_generated.h:110:23: note: in expansion of macro ‘ROS_LOG’
  110 | #define ROS_INFO(...) ROS_LOG(::ros::console::levels::Info, ROSCONSOLE_DEFAULT_NAME, __VA_ARGS__)
      |                       ^~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:115:9: note: in expansion of macro ‘ROS_INFO’
  115 |         ROS_INFO("lla_lead %f, %f, %f, %f", lla_lead0[0].x(), lla_lead0[0].y(), lla_lead0[0].z(), yaw_d);
      |         ^~~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:115:94: error: request for member ‘z’ in ‘((Eigen::DenseCoeffsBase<Eigen::Matrix<double, 3, 1>, 1>*)(& lla_lead0))->Eigen::DenseCoeffsBase<Eigen::Matrix<double, 3, 1>, 1>::operator[](0)’, which is of non-class type ‘Eigen::DenseCoeffsBase<Eigen::Matrix<double, 3, 1>, 1>::Scalar’ {aka ‘double’}
  115 |         ROS_INFO("lla_lead %f, %f, %f, %f", lla_lead0[0].x(), lla_lead0[0].y(), lla_lead0[0].z(), yaw_d);
      |                                                                                              ^
/opt/ros/noetic/include/ros/console.h:351:165: note: in definition of macro ‘ROSCONSOLE_PRINT_AT_LOCATION_WITH_FILTER’
  351 |     ::ros::console::print(filter, __rosconsole_define_location__loc.logger_, __rosconsole_define_location__loc.level_, __FILE__, __LINE__, __ROSCONSOLE_FUNCTION__, __VA_ARGS__)
      |                                                                                                                                                                     ^~~~~~~~~~~
/opt/ros/noetic/include/ros/console.h:390:7: note: in expansion of macro ‘ROSCONSOLE_PRINT_AT_LOCATION’
  390 |       ROSCONSOLE_PRINT_AT_LOCATION(__VA_ARGS__); \
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/ros/noetic/include/ros/console.h:575:35: note: in expansion of macro ‘ROS_LOG_COND’
  575 | #define ROS_LOG(level, name, ...) ROS_LOG_COND(true, level, name, __VA_ARGS__)
      |                                   ^~~~~~~~~~~~
/opt/ros/noetic/include/rosconsole/macros_generated.h:110:23: note: in expansion of macro ‘ROS_LOG’
  110 | #define ROS_INFO(...) ROS_LOG(::ros::console::levels::Info, ROSCONSOLE_DEFAULT_NAME, __VA_ARGS__)
      |                       ^~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:115:9: note: in expansion of macro ‘ROS_INFO’
  115 |         ROS_INFO("lla_lead %f, %f, %f, %f", lla_lead0[0].x(), lla_lead0[0].y(), lla_lead0[0].z(), yaw_d);
      |         ^~~~~~~~
make[2]: *** [CMakeFiles/main.dir/build.make:63: CMakeFiles/main.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:723: CMakeFiles/main.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
